添加浏览器显示小图标

--- a/src/main/resources/static/config/pear.config.json
+++ b/src/main/resources/static/config/pear.config.json
@@ -48,7 +48,7 @@
 		{
 			"icon": "layui-icon layui-icon-fonts-code",
 			"title": "开源地址",
-			"href": "#"
+			"href": "https://gitee.com/chenhuazhan-java/frank-boot.git"
 		}
 	],
 	"other": {
