添加操作日志以及登录页面

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,9 @@ spring:
     multipart: 
       max-file-size: 3MB
       max-request-size: 5MB
+  aop:
+    proxy-target-class: true
+    auto: true
   
 
 # 分页插件     
