--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,9 @@ server:
   servlet:
     # 项目contextPath
     context-path: /
+    # session登录过期时间（秒）
+    session: 
+      timeout: 1800
   tomcat:
     # tomcat的URI编码
     uri-encoding: UTF-8
@@ -11,6 +14,7 @@ server:
     max-threads: 800
     # Tomcat启动初始化的线程数，默认值25
     min-spare-threads: 30
+    
 spring:
   profiles:
     # 环境切换：dev-开发环境，prod-生产环境
