--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,16 +10,17 @@ server:
   tomcat:
     # tomcat的URI编码
     uri-encoding: UTF-8
-    # tomcat最大线程数，默认为200
-    max-threads: 800
-    # Tomcat启动初始化的线程数，默认值25
-    min-spare-threads: 30
-    
+    threads:
+      # tomcat最大线程数，默认为200
+      max: 800
+      # Tomcat启动初始化的线程数，默认值25
+      min-spare: 30
 spring:
   profiles:
     # 环境切换：dev-开发环境，prod-生产环境
     active: dev
-  jackson:    date-format: yyyy-MM-dd HH:mm:ss
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8 
   servlet: 
     multipart: 
