--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,13 @@
 		    <artifactId>tree-helper</artifactId>
 		    <version>1.0-RELEASE</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.github.oshi</groupId>
+		    <artifactId>oshi-core</artifactId>
+		    <version>5.7.3</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
